--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,13 +21,14 @@ jobs:
           override: true
 
       - name: Build moshi-server (Release)
-        uses: actions-rs/cargo@v1
+        uses: Jimver/cuda-toolkit@v0.2.26
+        id: cuda-toolkit
         with:
           command: build
           args: --release --features cuda --bin moshi-server
 
       - name: Upload built binary
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: moshi-server-binary
           path: target/release/moshi-server
