--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         uses: Jimver/cuda-toolkit@v0.2.26
         id: cuda-toolkit
         with:
-          use-local-cache: true
+          use-local-cache: false
       - run: nvcc -V
 
       # - name: Build moshi-server (Release)
